Fix scrollbar.

--- a/src/ui/list-container/list-container.css
+++ b/src/ui/list-container/list-container.css
@@ -1,5 +1,5 @@
 .list-container {
-  overflow-y: scroll;
+  overflow-y: auto;
   padding-bottom: 1rem;
   width: 100%;
   max-height: 70vh;
